# host

./: Cargo.toml  Makefile
guest_rust_trace/: Cargo.toml
guest_rust_trace/src/: bindings.rs  lib.rs
guest_rust_trace/wit/: world.wit
src/: main.rs
