[package]
name = "guest_rust_trace"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
wit-bindgen-rt = { version = "0.25.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "fastly:varnish"

[package.metadata.component.dependencies]
